# raze-tui

./: .editorconfig  .gitignore  AI.a2ml  CITATION.cff  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  ROADMAP.md  SECURITY.md  STATE.scm  TEST-NEEDS.md  TESTING-REPORT.adoc  TESTING-REPORT.scm  TOPOLOGY.md  deno.json  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  raze_tui.gpr  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  codeql.yml  guix-nix-policy.yml  mirror.yml  npm-bun-blocker.yml  quality.yml  rsr-antipattern.yml  scorecard.yml  secret-scanner.yml  ts-blocker.yml  workflow-linter.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machines_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  STATE.scm
.well-known/: ai.txt  consent-required.txt  dc.xml  humans.txt  provenance.json  security.txt
ada/: raze_tui.gpr
ada/src/: raze-tui.adb  raze-tui.ads  raze.ads  raze_tui_main.adb
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
rust/: Cargo.toml
rust/src/: lib.rs
src/rust/: Cargo.toml
src/rust/src/: lib.rs
zig/: build.zig
(+37 files in other folders)
